--- a/tools/templates/register_form.html
+++ b/tools/templates/register_form.html
@@ -25,45 +25,39 @@
     <script>
       $(function() {
         $("#datepicker input").datepicker({
+          minDate: "-100Y",
+          maxDate: 0,
+          yearRange: "-100:+100",
           changeMonth: true,
           changeYear: true
         });
-      });
-      $(document).ready(function() { 
-          // bind forms using 'ajaxForm' 
-          $('#form-register').ajaxForm({
-            beforeSend: function() {
-              $("#submit-register-form").toggle();
-              $("#spinner").toggle();
-            },
-            success: function(data) {
-              $("#submit-register-form").toggle();
-              $("#spinner").toggle();
-              $("#result").html(data);
-            },
-          }); 
       });
     </script>
   </head>
   <body>
 
     <div id='content' class='container'>
-      <div id="result"></div>
+
+      {% if form.errors %}
+        <div class="alert alert-error">
+          {{ form.errors }}
+        </div>
+      {% endif %}
 
       <div class="row">
         <div class="span12">
-          <form id="form-register" class="form-horizontal" method="post" action="{% url get_form %}">
+          <form id="form-register" class="form-horizontal" method="post" action="{% url get_form %}" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="control-group">
               <label class="control-label">First name</label>
               <div class="controls">
-                {{ form.first_name }}
+                {{ form.firstname }}
               </div>
             </div>
             <div class="control-group">
               <label class="control-label">Last name</label>
               <div class="controls">
-                {{ form.last_name }}
+                {{ form.lastname }}
               </div>
             </div>
             <div class="control-group">
@@ -75,7 +69,7 @@
             <div class="control-group">
               <label class="control-label">Phone number</label>
               <div class="controls">
-                {{ form.phone_number }}
+                {{ form.mobile }}
               </div>
             </div>
             <div class="control-group">
@@ -97,12 +91,16 @@
               </div>
             </div>
             <div class="control-group"><label class="control-label">Address</label>
-              <div class="controls">{{ form.address1 }}</div>
-              <div class="controls">{{ form.address2 }}</div>
+              <div class="controls">{{ form.addresslineone }}</div>
+              <div class="controls">{{ form.addresslinetwo }}</div>
             </div>
             <div class="control-group">
               <label class="control-label">City and post code</label>
-              <div class="controls">{{ form.address3 }}</div>
+              <div class="controls">{{ form.cityandpostcode }}</div>
+            </div>
+            <div class="control-group">
+              <label class="control-label">A nice picture of yourself</label>
+              <div class="controls">{{ form.img }}</div>
             </div>
             <input type="submit" id="submit-register-form" value="Get your form">
             <img src="{{ STATIC_URL}}img/spinner.gif" id="spinner" style="display: none;">
