--- a/tools/templates/register_form.html
+++ b/tools/templates/register_form.html
@@ -99,7 +99,7 @@
               <div class="controls">{{ form.cityandpostcode }}</div>
             </div>
             <div class="control-group">
-              <label class="control-label">A nice picture of yourself</label>
+              <label class="control-label">A nice picture of yourself (jpg or png)</label>
               <div class="controls">{{ form.img }}</div>
             </div>
             <input type="submit" id="submit-register-form" value="Get your form">
