Render nice error in template
This happens whenever the image cannot be processed.

--- a/tools/templates/register_form.html
+++ b/tools/templates/register_form.html
@@ -38,6 +38,11 @@
 
     <div id='content' class='container'>
 
+      {% if error %}
+        <div class="alert alert-error">
+          {{ error }}
+        </div>
+      {% endif %}
       {% if form.errors %}
         <div class="alert alert-error">
           {{ form.errors }}
