--- a/tools/templates/register_form.html
+++ b/tools/templates/register_form.html
@@ -25,6 +25,7 @@
     <script>
       $(function() {
         $("#datepicker input").datepicker({
+          dateFormat: "dd/mm/yy",
           minDate: "-100Y",
           maxDate: 0,
           yearRange: "-100:+100",
