choice of teams

--- a/tools/templates/register_form.html
+++ b/tools/templates/register_form.html
@@ -96,6 +96,12 @@
                 {{ form.experience }}
               </div>
             </div>
+            <div class="control-group">
+              <label class="control-label">Team</label>
+              <div class="controls">
+                {{ form.team }}
+              </div>
+            </div>
             <div class="control-group"><label class="control-label">Address</label>
               <div class="controls">{{ form.addresslineone }}</div>
               <div class="controls">{{ form.addresslinetwo }}</div>
